{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 39,
  "lineage": "6fb9359b-6ba8-3479-4b8b-b3e5375f1682",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000b3a073fc20e415",
            "arn": "arn:aws:ec2:us-east-1:020010993578:instance/i-08d449344fdfc0915",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d449344fdfc0915",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "investing_scrapping",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-093b5e32f290ca535",
            "private_dns": "ip-10-193-90-7.ec2.internal",
            "private_ip": "10.193.90.7",
            "public_ip": "34.238.167.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-054d8ea5b81bf5d04",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022798200ac45f572",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e876c42107e0ca3c"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_access",
            "aws_subnet.main_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_vpc_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020010993578:internet-gateway/igw-095daedd359597495",
            "id": "igw-095daedd359597495",
            "owner_id": "020010993578",
            "vpc_id": "vpc-01a001537958727fb"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main_subnet_nacl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020010993578:network-acl/acl-0f7ec2e0f68cabdd4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 202,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 201,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "177.68.248.159/32",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              }
            ],
            "id": "acl-0f7ec2e0f68cabdd4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 101,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "177.68.248.159/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "177.68.248.159/32",
                "from_port": 2375,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 102,
                "to_port": 2375
              },
              {
                "action": "allow",
                "cidr_block": "177.68.248.159/32",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 103,
                "to_port": 27017
              }
            ],
            "owner_id": "020010993578",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-022798200ac45f572"
            ],
            "tags": null,
            "vpc_id": "vpc-01a001537958727fb"
          },
          "dependencies": [
            "aws_subnet.main_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0460134586756ffef",
            "owner_id": "020010993578",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095daedd359597495",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-01a001537958727fb"
          },
          "dependencies": [
            "aws_internet_gateway.main_vpc_internet_gateway",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1a6bbf740a57155",
            "route_table_id": "rtb-0460134586756ffef",
            "subnet_id": "subnet-022798200ac45f572"
          },
          "dependencies": [
            "aws_internet_gateway.main_vpc_internet_gateway",
            "aws_route_table.route_table",
            "aws_subnet.main_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020010993578:security-group/sg-0e876c42107e0ca3c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e876c42107e0ca3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "177.68.248.159/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20200712211436981100000001",
            "name_prefix": null,
            "owner_id": "020010993578",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01a001537958727fb"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020010993578:subnet/subnet-022798200ac45f572",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.193.90.0/28",
            "id": "subnet-022798200ac45f572",
            "map_public_ip_on_launch": true,
            "owner_id": "020010993578",
            "vpc_id": "vpc-01a001537958727fb"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020010993578:vpc/vpc-01a001537958727fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.193.0.0/16",
            "default_network_acl_id": "acl-0bcbf8c5596bc20c8",
            "default_route_table_id": "rtb-007a1d34bf5a3d25c",
            "default_security_group_id": "sg-0e250d76a4756ed5b",
            "dhcp_options_id": "dopt-bed7e0c7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01a001537958727fb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-007a1d34bf5a3d25c",
            "owner_id": "020010993578",
            "tags": {
              "Description": "main vpc for personal projects",
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}